k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitako-web-ingress
  namespace: sitako
  # Konfigurasi Ingress Traefik untuk K3s
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  # Ingress controller default di K3s (Traefik)
  ingressClassName: traefik

  # Ingress controller untuk Minikube (setelah 'minikube addons enable ingress') - Uncomment jika menggunakan Minikube
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          # 1. Seluruh trafik API diarahkan ke backend service 'app' (port 8080)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8080
          # 2. Seluruh trafik web (root & static assets) diarahkan ke frontend service 'sitako-web' (port 80)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sitako-web
                port:
                  number: 80
